[package]
edition = "2021"
name = "rust-todo-backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
hyper = {version = "0.14.27", features = ["full"]}
mime = "0.3.17"
serde = {version = "1.0.190", features = ["derive"]}
serde_json = "1.0.107"
thiserror = "1.0.50"
tokio = {version = "1.33.0", features = ["full"]}
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
